k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-ingress
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: login-backend
                port: { number: 8000 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-frontend
                port: { number: 80 }
